--- a/app/src/main/res/layout/main_news_list_item.xml
+++ b/app/src/main/res/layout/main_news_list_item.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="8dp"
+    android:elevation="3dp">
 
     <TextView
         android:id="@+id/news_title_text_view"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/author"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/news_title_text_view" />
 
@@ -27,25 +31,26 @@
         android:id="@+id/news_author_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintStart_toEndOf="@id/news_author_label_text_view"
         app:layout_constraintTop_toTopOf="@id/news_author_label_text_view"
         tools:text="Maja Francetic" />
 
     <TextView
+        android:id="@+id/news_time_label_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/news_author_text_view"
+        android:text="@string/created_at" />
+
+    <TextView
         android:id="@+id/news_time_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        app:layout_constraintStart_toEndOf="@id/news_time_label_text_view"
+        app:layout_constraintTop_toTopOf="@id/news_time_label_text_view"
         tools:text="27.04.2020" />
-
-    <TextView
-        android:id="@+id/news_score_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/news_time_text_view"
-        app:layout_constraintTop_toBottomOf="@id/news_time_text_view"
-        tools:text="5" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
